<resources>
    <string name="app_name">Contatinhos</string>
    <string name="app_name_debug">Contatinhos - DEBUG</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Util</string>
    <string name="title_notifications">Programação</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="save">Save</string>
    <string name="cd_buttom_for_edition">Buttom for edition</string>
    <string name="cd_buttom_for_delete">Buttom for delete</string>
    <string name="cd_buttom_for_call">Buttom for call</string>
    <string name="cd_buttom_for_sms">Buttom for sms</string>
    <string name="label_subject_ideias">Idéias de assunto</string>
    <string name="buttom_dog">Cão</string>
    <string name="buttom_cat">Gato</string>
    <string name="buttom_advice">Conselho</string>
    <string name="buttom_joke">Piada</string>
    <string name="buttom_astrology">Astrologia</string>
    <string name="an_advice_for_you">Um conselho para você</string>
    <string name="ok">OK</string>
    <string name="title_confirm">Tem certeza?</string>
    <string name="message_confirm">Confirma que pretende deletar esse contato?</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    <string name="message_whatsapp_unavailable">O WhatsApp desse contato não está disponível.</string>
    <string name="url_whatsapp">https://api.whatsapp.com/send?phone=</string>
    <string name="set_the_date">Selecione o dia</string>
    <string name="add_event">Adicione um evento</string>
    <string name="buttom_to_save_event">buttom to save event</string>
</resources>