<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:padding="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Teste" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="+351 912 154 960" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fab_edit"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cd_buttom_for_edition"
                app:icon="@drawable/ic_edit"
                app:iconTint="@color/md_theme_primary"
                app:layout_constraintEnd_toStartOf="@+id/fab_delete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fab_delete"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cd_buttom_for_delete"
                app:icon="@drawable/ic_delete"
                app:iconTint="@color/md_theme_primary"
                app:layout_constraintEnd_toStartOf="@+id/fab_call"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fab_edit"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fab_call"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cd_buttom_for_call"
                app:icon="@drawable/ic_call"
                app:iconTint="@color/md_theme_primary"
                app:layout_constraintEnd_toStartOf="@+id/fab_sms"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fab_delete"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fab_sms"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cd_buttom_for_sms"
                app:icon="@drawable/ic_chat"
                app:iconTint="@color/md_theme_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fab_call"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>